--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -13,17 +13,13 @@ on:
 jobs:
   lint:
     runs-on: ubuntu-latest
-    strategy:
-      max-parallel: 5
-      matrix:
-        python-version: [ "3.11", "3.12", "3.13" ]
 
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: "3.13"
 
       - name: Install Ruff
         run: pip install ruff
