--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -1,6 +1,8 @@
 name: Pre-Commit Checks
 
-on: [ push, pull_request ]
+on:
+  pull_request:
+    types: [ opened, reopened, synchronize ]
 
 jobs:
   pre-commit-checks:
