--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,13 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "datasets>=4.3.0",
+    "huggingface-hub>=1.0.1",
     "numpy>=2.3.4",
+    "tiktoken>=0.12.0",
     "torch>=2.9.0",
+    "tqdm>=4.67.1",
+    "wandb>=0.22.3",
 ]
 
 [project.optional-dependencies]
