--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ convention = "google"
 [tool.ruff]
 line-length = 120
 target-version = "py311"
+extend-exclude = ["build"]
 
 [tool.ruff.format]
 quote-style = "double"
