--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -10,13 +10,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+            ref: ${{ github.head_ref }}
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.13"
 
       - name: Install Ruff
-        run: pip install ruff
+        run: pip install -U ruff
 
       - name: Run Ruff Lint
         run: |
