add: fix model training

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "datasets>=4.3.0",
     "huggingface-hub>=1.0.1",
     "numpy>=2.3.4",
+    "safetensors>=0.6.2",
     "tiktoken>=0.12.0",
     "torch>=2.9.0",
     "tqdm>=4.67.1",
