--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -20,9 +20,12 @@ jobs:
       - name: Install Ruff
         run: pip install -U ruff
 
+      - name: Show ruff config
+        run: ruff check --show-settings
+
       - name: Run Ruff Lint
         run: |
-          ruff check . --output-format=github
+          ruff check . --output-format=github --config=pyproject.toml
 
       - name: Run Ruff Format Check
         run: |
