--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,12 @@ dev = [
     "ruff>=0.14.3",
 ]
 
+[tool.ruff]
+src = ["src"]
+line-length = 120
+target-version = "py313"
+extend-exclude = ["build"]
+
 [tool.ruff.lint]
 select = [
     "E", # Pycodestyle errors
@@ -39,11 +45,6 @@ select = [
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
-
-[tool.ruff]
-line-length = 120
-target-version = "py311"
-extend-exclude = ["build"]
 
 [tool.ruff.format]
 quote-style = "double"
