--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -21,7 +21,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install .[dev]
+          pip install "ruff>=0.14.4"
+          pip install "pre-commit>=4.4.0"
 
       - name: Run pre-commit hooks
         run: pre-commit run --all-files
