--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "datasets>=4.3.0",
     "huggingface-hub>=1.0.1",
+    "matplotlib>=3.9.0",
     "numpy>=2.3.4",
     "safetensors>=0.6.2",
     "tiktoken>=0.12.0",
